change entry point

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "decorators-express",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "",
-  "main": "main.ts",
+  "main": "dist/index.js",
   "scripts": {
     "dev:build": "tsc --watch",
     "dev:start": "nodemon --config ./nodemon.json",
