--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "decorators-express",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "dev:build": "tsc --watch",
     "dev:start": "nodemon --config ./nodemon.json",
