--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "decorators-express",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,7 +9,7 @@
     "dev:start": "nodemon --config ./nodemon.json",
     "dev": "npm-run-all -p dev:**",
     "build": "tsc",
-    "start": "node ./dist/main"
+    "start": "node ./dist/index"
   },
   "keywords": [],
   "author": "netanel",
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.8",
+    "decorators-express": "^1.3.0",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5"
   },
