--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "decorators-express",
-  "version": "1.7.3",
+  "version": "1.7.4",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -24,5 +24,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "reflect-metadata": "^0.1.13"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/natnathou/decorators-express"
   }
 }
