--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies and build 🔧
         run: npm ci && npm run build
       - name: Set git config username
-        run: git config --global user.username ${{ secrets.GIT_USERNAME }}
+        run: git config --global user.name ${{ secrets.GIT_USERNAME }}
       - name: Set git config email
         run: git config --global user.email ${{ secrets.GIT_EMAIL }}
       - name: Commit change
