--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -32,6 +32,8 @@ jobs:
         run: git add . && git commit -am "after build from workflow"
       - name: Patch npm version
         run:  npm version patch
+      - name: update git remote
+        run: git remote add origin "https://github.com/natnathou/decorators-express.git"
       - name: Commit change after upgrade version
         run: git push origin master
       - name: Publish package on NPM 📦
