--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -32,8 +32,12 @@ jobs:
         run: git add . && git commit -am "after build from workflow"
       - name: Patch npm version
         run:  npm version patch
+      - name: git fetch
+        run: git fetch
+      - name: checkout master
+        run: git checkout master
       - name: push change after upgrade version
-        run: git checkout master && git push origin master
+        run: git push origin master
       - name: Publish package on NPM 📦
         run: npm publish
         env:
