--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -18,7 +18,6 @@ jobs:
         with:
           node-version: '14.x'
           registry-url: 'https://registry.npmjs.org'
-          github_token: ${{ secrets.TOKEN_GITHUB }}
       - name: Install dependencies and build 🔧
         run: npm ci && npm run build
       - name: Set git config username
@@ -33,13 +32,21 @@ jobs:
         run: git add . && git commit -am "after build from workflow"
       - name: Patch npm version
         run:  npm version patch
+      - name: Publish package on NPM 📦
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: git fetch
         run: git fetch
       - name: checkout master
         run: git checkout master
       - name: push change after upgrade version
         run: git push origin master
-      - name: Publish package on NPM 📦
-        run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        # Push the changes
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.TOKEN_GITHUB }}
+          branch: master
+          force: true
+
