--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
-          node-version: '14.x'
+          node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
       - name: Set git config username
         run: git config --global user.name "$GIT_USERNAME"
@@ -26,14 +26,12 @@ jobs:
         run: git config --global user.email "$GIT_EMAIL"
         env:
           GIT_EMAIL: ${{ secrets.GIT_EMAIL }}
-      - name: git fetch
+      - name: Git fetch
         run: git fetch
-      - name: checkout master
+      - name: Checkout to master
         run: git checkout master
       - name: Install dependencies and build 🔧
         run: npm ci && npm run build
-      - name: Git status
-        run: git status
       - name: Commit change after build
         run: git add . && git commit -am "after build from workflow"
       - name: Patch npm version
@@ -43,8 +41,6 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         # Push the changes
-      - name: Git status
-        run: git status
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
