--- a/package.json
+++ b/package.json
@@ -9,17 +9,31 @@
     "dev:start": "nodemon --config ./nodemon.json",
     "dev": "npm-run-all -p dev:**",
     "build": "tsc",
-    "start": "node ./dist/index"
+    "start": "node ./dist/index",
+    "test": "jest",
+    "test:watch": "jest --watchAll --silent --config jest.config.ts",
+    "test:coverage": "jest --coverage --config jest.config.ts",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --config jest.config.ts",
+    "test:e2e": "jest --config e2e.config.ts"
   },
   "keywords": [],
   "author": "netanel",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
     "@types/node": "^20.4.8",
     "decorators-express": "^1.3.0",
+    "jest": "^29.6.2",
+    "jest-jasmine2": "^29.6.2",
+    "jest-junit": "^16.0.0",
     "nodemon": "^3.0.1",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "express": "^4.18.2",
