--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,6 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true, "skipLibCheck": true
-  }
+  },
+  "include": ["src"]
 }
