--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test:watch": "jest --watchAll --silent --config jest.config.ts",
     "test:coverage": "jest --coverage --config jest.config.ts",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --config jest.config.ts",
-    "test:e2e": "jest --config e2e.config.ts"
+    "test:e2e": "jest --config e2e.config.ts",
+    "lint": "eslint \"{src}/**/*.ts\" --cache --fix"
   },
   "keywords": [],
   "author": "netanel",
@@ -23,11 +24,21 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.8",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
+    "eslint": "^8.46.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.6.2",
     "jest-jasmine2": "^29.6.2",
     "jest-junit": "^16.0.0",
+    "jsonc-eslint-parser": "^2.3.0",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
+    "pretier": "^0.0.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
