--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "netanel",
   "license": "ISC",
   "devDependencies": {
+    "@types/busboy": "^1.5.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.8",
@@ -46,6 +47,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "busboy": "^1.6.0",
     "express": "^4.18.2",
     "pino": "^8.15.0",
     "pino-pretty": "^10.2.0",
